--- a/instagram_ios/instagram_ios/Source/Main/Base.lproj/Main.storyboard
+++ b/instagram_ios/instagram_ios/Source/Main/Base.lproj/Main.storyboard
@@ -523,50 +523,51 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="JNd-dq-XFM">
-                                <rect key="frame" x="0.0" y="91" width="428" height="110"/>
+                                <rect key="frame" x="0.0" y="91" width="428" height="90"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="110" id="9if-tS-hcm"/>
+                                    <constraint firstAttribute="height" constant="90" id="9if-tS-hcm"/>
                                 </constraints>
                                 <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="YjX-qE-6oL">
-                                    <size key="itemSize" width="110" height="104"/>
+                                    <size key="itemSize" width="80" height="80"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="4" minY="4" maxX="4" maxY="4"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" restorationIdentifier="StoryCollectionViewCell" reuseIdentifier="storyCell" id="XWp-Fo-Sps" customClass="StoryCollectionViewCell" customModule="instagram_ios" customModuleProvider="target">
-                                        <rect key="frame" x="4" y="3" width="110" height="104"/>
+                                        <rect key="frame" x="4" y="5" width="80" height="80"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="gKd-B8-k2o">
-                                            <rect key="frame" x="0.0" y="0.0" width="110" height="104"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="80" height="80"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="vga-kl-qHb" customClass="RoundImageView" customModule="instagram_ios" customModuleProvider="target">
-                                                    <rect key="frame" x="18" y="0.0" width="74" height="68"/>
-                                                    <color key="backgroundColor" systemColor="systemGray5Color"/>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="dgg-Ck-j1b" customClass="RoundImageView" customModule="instagram_ios" customModuleProvider="target">
+                                                    <rect key="frame" x="15" y="8" width="50" height="50"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="50" id="Ieg-kF-0Tf"/>
+                                                        <constraint firstAttribute="width" secondItem="dgg-Ck-j1b" secondAttribute="height" multiplier="1:1" id="kX9-3w-yIn"/>
+                                                    </constraints>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1qa-Hf-KNa">
-                                                    <rect key="frame" x="34" y="78" width="42" height="16"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wmf-uw-TXM">
+                                                    <rect key="frame" x="27" y="62" width="26.333333333333329" height="14"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="10"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="vga-kl-qHb" firstAttribute="leading" secondItem="gKd-B8-k2o" secondAttribute="leading" constant="18" id="2rq-yF-b1s"/>
-                                                <constraint firstAttribute="bottom" secondItem="vga-kl-qHb" secondAttribute="bottom" constant="36" id="9QN-yg-jNc"/>
-                                                <constraint firstItem="1qa-Hf-KNa" firstAttribute="centerX" secondItem="gKd-B8-k2o" secondAttribute="centerX" id="ND2-Xm-gfH"/>
-                                                <constraint firstAttribute="trailing" secondItem="vga-kl-qHb" secondAttribute="trailing" constant="18" id="RsU-oa-8zU"/>
-                                                <constraint firstItem="1qa-Hf-KNa" firstAttribute="top" secondItem="vga-kl-qHb" secondAttribute="bottom" constant="10" id="aw1-Zf-3L5"/>
-                                                <constraint firstAttribute="bottom" secondItem="1qa-Hf-KNa" secondAttribute="bottom" constant="10" id="hZB-kr-oiX"/>
-                                                <constraint firstItem="vga-kl-qHb" firstAttribute="top" secondItem="gKd-B8-k2o" secondAttribute="top" id="xbl-OL-nFq"/>
+                                                <constraint firstItem="dgg-Ck-j1b" firstAttribute="centerX" secondItem="gKd-B8-k2o" secondAttribute="centerX" id="LSm-1q-wB7"/>
+                                                <constraint firstItem="dgg-Ck-j1b" firstAttribute="top" secondItem="gKd-B8-k2o" secondAttribute="top" constant="8" id="PzV-bk-KQS"/>
+                                                <constraint firstAttribute="bottom" secondItem="wmf-uw-TXM" secondAttribute="bottom" constant="4" id="cA7-xR-aUF"/>
+                                                <constraint firstItem="wmf-uw-TXM" firstAttribute="centerX" secondItem="gKd-B8-k2o" secondAttribute="centerX" id="qyi-rV-1Ip"/>
+                                                <constraint firstItem="wmf-uw-TXM" firstAttribute="top" secondItem="dgg-Ck-j1b" secondAttribute="bottom" constant="4" id="sQq-x0-qbz"/>
                                             </constraints>
                                         </collectionViewCellContentView>
-                                        <size key="customSize" width="110" height="104"/>
+                                        <size key="customSize" width="80" height="80"/>
                                         <connections>
-                                            <outlet property="storyImage" destination="vga-kl-qHb" id="7DU-YQ-czp"/>
-                                            <outlet property="storyUserName" destination="1qa-Hf-KNa" id="K6C-NA-9Q1"/>
+                                            <outlet property="storyImage" destination="dgg-Ck-j1b" id="tHk-pd-KJW"/>
+                                            <outlet property="storyUserName" destination="wmf-uw-TXM" id="Pew-FV-W76"/>
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
@@ -576,7 +577,7 @@
                                 </connections>
                             </collectionView>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="4r8-Qy-nH2">
-                                <rect key="frame" x="0.0" y="209" width="428" height="634"/>
+                                <rect key="frame" x="0.0" y="189" width="428" height="654"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="bKA-H6-qbR">
                                     <size key="itemSize" width="427" height="639"/>
@@ -672,7 +673,7 @@
                                                     </constraints>
                                                 </view>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pLb-mg-abW">
-                                                    <rect key="frame" x="20" y="395" width="387" height="244"/>
+                                                    <rect key="frame" x="20" y="395" width="387" height="164"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="254" text="좋아요" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="S23-YA-EmL">
                                                             <rect key="frame" x="14.999999999999996" y="7.9999999999999982" width="41.666666666666657" height="19.333333333333329"/>
@@ -687,7 +688,7 @@
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="254" text="게시글 올린 날짜" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ncc-eC-TbB">
-                                                            <rect key="frame" x="15" y="230.66666666666663" width="79.666666666666671" height="13.333333333333343"/>
+                                                            <rect key="frame" x="15" y="150.66666666666663" width="79.666666666666671" height="13.333333333333343"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                             <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             <nil key="highlightedColor"/>
@@ -699,7 +700,7 @@
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="E0B-OF-eRq">
-                                                            <rect key="frame" x="15" y="210.66666666666663" width="92.666666666666671" height="16"/>
+                                                            <rect key="frame" x="15" y="130.66666666666663" width="92.666666666666671" height="16"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="height" constant="16" id="3kA-gQ-ctz"/>
                                                             </constraints>
@@ -747,7 +748,7 @@
                                                 <constraint firstAttribute="trailing" secondItem="dXI-Kc-wBu" secondAttribute="trailing" id="inp-Nm-4jU"/>
                                                 <constraint firstItem="jBy-bg-gcQ" firstAttribute="top" secondItem="dXI-Kc-wBu" secondAttribute="bottom" id="k5H-x1-1G8"/>
                                                 <constraint firstItem="pLb-mg-abW" firstAttribute="leading" secondItem="1t0-Ue-bdV" secondAttribute="leading" constant="20" id="lsG-zl-xtz"/>
-                                                <constraint firstAttribute="bottom" secondItem="pLb-mg-abW" secondAttribute="bottom" id="mKE-HI-4pT"/>
+                                                <constraint firstAttribute="bottom" secondItem="pLb-mg-abW" secondAttribute="bottom" constant="80" id="mKE-HI-4pT"/>
                                                 <constraint firstItem="SmK-Ay-hja" firstAttribute="leading" secondItem="1t0-Ue-bdV" secondAttribute="leading" constant="10" id="wOu-mh-0qJ"/>
                                             </constraints>
                                         </collectionViewCellContentView>
@@ -795,7 +796,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qKy-W1-qv9" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="543" y="-1595"/>
+            <point key="canvasLocation" x="541.12149532710282" y="-1595.2483801295898"/>
         </scene>
         <!--NoticeViewController-->
         <scene sceneID="Mam-9D-Qg9">
@@ -869,11 +870,11 @@
             </objects>
             <point key="canvasLocation" x="2835" y="-2451"/>
         </scene>
-        <!--Item-->
+        <!--Navigation Controller-->
         <scene sceneID="hZp-OW-mrc">
             <objects>
                 <navigationController id="gsK-GN-QH6" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="KD5-RE-ukU"/>
+                    <tabBarItem key="tabBarItem" title="" selectedImage="tabbar_profile" id="KD5-RE-ukU"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="zbi-Ui-gHQ">
                         <rect key="frame" x="0.0" y="47" width="428" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -1125,7 +1126,7 @@
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                 </subviews>
-                                <color key="backgroundColor" systemColor="systemBrownColor"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="120" id="037-U6-AcD"/>
                                     <constraint firstItem="szK-QB-o31" firstAttribute="top" secondItem="RoI-85-e5C" secondAttribute="top" constant="20" id="ITb-Hg-AvJ"/>
@@ -2338,14 +2339,8 @@
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
-        <systemColor name="systemBrownColor">
-            <color red="0.63529411764705879" green="0.51764705882352946" blue="0.36862745098039218" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
         <systemColor name="systemCyanColor">
             <color red="0.19607843137254902" green="0.67843137254901964" blue="0.90196078431372551" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
-        <systemColor name="systemGray5Color">
-            <color red="0.89803921568627454" green="0.89803921568627454" blue="0.91764705882352937" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemGray6Color">
             <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
