--- a/instagram_ios/instagram_ios/Source/Main/Base.lproj/Main.storyboard
+++ b/instagram_ios/instagram_ios/Source/Main/Base.lproj/Main.storyboard
@@ -1374,17 +1374,31 @@
         <!--Make Story View Controller-->
         <scene sceneID="Idr-cG-1kC">
             <objects>
-                <viewController storyboardIdentifier="MakeStoryViewController" id="odn-ZU-Gw6" customClass="MakeStoryViewController" customModule="instagram_ios" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="MakeStoryViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="odn-ZU-Gw6" customClass="MakeStoryViewController" customModule="instagram_ios" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="gKC-HP-Jbs">
                         <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Tx8-Sz-ICp">
+                                <rect key="frame" x="0.0" y="47" width="428" height="845"/>
+                            </imageView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="Fei-cu-mYr"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Fei-cu-mYr" firstAttribute="bottom" secondItem="Tx8-Sz-ICp" secondAttribute="bottom" id="65i-Mf-NOD"/>
+                            <constraint firstItem="Fei-cu-mYr" firstAttribute="trailing" secondItem="Tx8-Sz-ICp" secondAttribute="trailing" id="PGx-yv-niE"/>
+                            <constraint firstItem="Tx8-Sz-ICp" firstAttribute="top" secondItem="Fei-cu-mYr" secondAttribute="top" id="bG2-4p-qRa"/>
+                            <constraint firstItem="Tx8-Sz-ICp" firstAttribute="leading" secondItem="Fei-cu-mYr" secondAttribute="leading" id="zWg-ae-hwd"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="Image" destination="Tx8-Sz-ICp" id="qDE-Be-8n3"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lWu-ab-FUa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4348" y="2775"/>
+            <point key="canvasLocation" x="-185" y="-3332"/>
         </scene>
         <!--QR코드-->
         <scene sceneID="7F7-sp-Bob">
